RESOLVED FIXED218107
[LFC][IFC] Fix inline box relative alignment when line height is set
https://bugs.webkit.org/show_bug.cgi?id=218107
Summary [LFC][IFC] Fix inline box relative alignment when line height is set
alan
Reported 2020-10-22 16:19:47 PDT
it's layout bounds vs. font metrics
Attachments
Patch (8.30 KB, patch)
2020-10-22 16:33 PDT, alan
no flags
alan
Comment 1 2020-10-22 16:33:29 PDT
EWS
Comment 2 2020-10-23 05:44:49 PDT
Committed r268922: <https://trac.webkit.org/changeset/268922> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412142 [details].
Radar WebKit Bug Importer
Comment 3 2020-10-23 05:45:23 PDT
Note You need to log in before you can comment on or make changes to this bug.